--- a/css/cloth_artist.css
+++ b/css/cloth_artist.css
@@ -16,7 +16,7 @@ body {
     top: 0;
     width: 300px;
     height: 100vh;
-    background-color: #609afe;
+    background-color: #c6bef1;
     padding: 40px 20px;
     z-index: 100;
     display: flex;
@@ -114,8 +114,8 @@ main {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
-    color: #609afe;
-    border-bottom: 3px solid #609afe;
+    color: #c6bef1;
+    border-bottom: 3px solid #c6bef1;
     padding-bottom: 10px;
 }
 
@@ -132,7 +132,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #609afe;
+    color: #c6bef1;
     font-size: 36px;
     font-family: monospace;
     overflow: hidden;
